update to routerV2, enchanced TopBar, add header and returnbutton global components

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.filter-white {
+    filter: brightness(0) invert(1);
+  }
+
+  .responsive-img {
+    width: 10%; 
+    height: auto; 
+  }
+
+
+  
+  #control-buttons {
+    z-index: 2;
+  }
